# os dependent
SET(SYSFILE getcallerpc-x86_64.c)
SET(FMTOFILES
	fmt/dofmt.c
	fmt/fltfmt.c
	fmt/fmt.c
	fmt/fmtfd.c
	fmt/fmtfdflush.c
	fmt/fmtlocale.c
	fmtlock2.c
	fmt/fmtnull.c
	fmt/fmtprint.c
	fmt/fmtquote.c
	fmt/fmtrune.c
	fmt/fmtstr.c
	fmt/fmtvprint.c
	fmt/fprint.c
	fmt/nan64.c
	fmt/print.c
	fmt/runefmtstr.c
	fmt/runeseprint.c
	fmt/runesmprint.c
	fmt/runesnprint.c
	fmt/runesprint.c
	fmt/runevseprint.c
	fmt/runevsmprint.c
	fmt/runevsnprint.c
	fmt/seprint.c
	fmt/smprint.c
	fmt/snprint.c
	fmt/sprint.c
	fmt/strtod.c
	fmt/vfprint.c
	fmt/vseprint.c
	fmt/vsmprint.c
	fmt/vsnprint.c
	fmt/charstod.c
	fmt/pow10.c)

SET(UTFOFILES
	utf/rune.c
	utf/runestrcat.c
	utf/runestrchr.c
	utf/runestrcmp.c
	utf/runestrcpy.c
	utf/runestrdup.c
	utf/runestrlen.c
	utf/runestrecpy.c
	utf/runestrncat.c
	utf/runestrncmp.c
	utf/runestrncpy.c
	utf/runestrrchr.c
	utf/runestrstr.c
	utf/runetype.c
	utf/utfecpy.c
	utf/utflen.c
	utf/utfnlen.c
	utf/utfrrune.c
	utf/utfrune.c
	utf/utfutf.c)

SET(LIB9OFILES
	_exits.c
	_p9dialparse.c
	_p9dir.c
	announce.c
	argv0.c
	atexit.c
	atoi.c
	atol.c
	atoll.c
	atnotify.c
	await.c
	cistrcmp.c
	cistrncmp.c
	cistrstr.c
	cleanname.c
	convD2M.c
	convM2D.c
	convM2S.c
	convS2M.c
	create.c
	ctime.c
	dial.c
	dirfstat.c
	dirfwstat.c
	dirmodefmt.c
	dirread.c
	dirstat.c
	dirwstat.c
	dup.c
	encodefmt.c
	errstr.c
	exec.c
	execl.c
	exitcode.c
	fcallfmt.c
	get9root.c
	getenv.c
	getfields.c
	getnetconn.c
	getns.c
	getuser.c
	getwd.c
	jmp.c
	lrand.c
	lnrand.c
	main.c
	malloc.c
	malloctag.c
	mallocz.c
	nan.c
	needsrcquote.c
	needstack.c
	netcrypt.c
	netmkaddr.c
	notify.c
	nrand.c
	nulldir.c
	open.c
	opentemp.c
	pin.c
	pipe.c
	post9p.c
	postnote.c
	qlock.c
	quote.c
	rand.c
	read9pmsg.c
	readcons.c
	readn.c
	rfork.c
	searchpath.c
	seek.c
	sendfd.c
	sleep.c
	strdup.c
	strecpy.c
	sysfatal.c
	syslog.c
	sysname.c
	time.c
	tm2sec.c
	tokenize.c
	truerand.c
	u16.c
	u32.c
	u64.c
	unsharp.c
	wait.c
	waitpid.c
	write.c
	zoneinfo.c)

SET(OFILES	${LIB9OFILES} ${FMTOFILES} ${UTFOFILES} ${SYSFILE})
#MESSAGE("OFILES" ${OFILES})
ADD_LIBRARY(9 STATIC ${OFILES})
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)